<resources>
    <string name="app_name">LFG</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in_short">Einloggen</string>
    <string name="invalid_username">Kein gültiger Username</string>
    <string name="invalid_password">Passwort muss mindestens 6 Zeichen lang sein</string>
    <string name="home">Home</string>
    <string name="swipe">Swipe</string>
    <string name="matches">Matches</string>
    <string name="aktuell_auf_der_suche_nach_teilnehmer">Aktuell auf der Suche nach Teilnehmer</string>
    <string name="gruppen_name">Gruppen Name</string>
    <string name="e_mail_adresse">E-Mail Adresse</string>
    <string name="telefonnummer">Telefonnummer</string>
    <string name="beschreibe_deine_gruppe">Beschreibe deine Gruppe</string>
    <string name="neuen_tag_hinzuf_gen">Neuen Tag hinzufügen</string>
    <string name="plus">+</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="speichern">Speichern</string>
    <string name="meine_gruppen">Meine Gruppen</string>
    <string name="neue_gruppe">Neue Gruppe</string>
    <string name="aktuell_auf_der_suche_nach_einer_gruppe">Aktuell auf der Suche nach einer Gruppe</string>
    <string name="nachname">Nachname</string>
    <string name="vorname">Vorname</string>
    <string name="delete">Löschen</string>
    <string name="beschreibe_dich">Beschreibe dich</string>
    <string name="ablehnen"><![CDATA[< Ablehnen]]></string>
    <string name="annehmen"><![CDATA[Annehmen >]]></string>
    <string name="hilfe">Hilfe</string>
    <string name="logout">Logout</string>
    <string name="info_button">info-Button</string>
    <string name="alter">Alter</string>
    <string name="geschlecht">Geschlecht</string>
    <string name="usertoken">USERTOKEN</string>
    <string name="retry">"Bitte versuchen Sie es erneut"</string>
    <string name="deleteTag">Das Tag wird gelöscht!</string>
    <string name="addTagErrorMessage">Geben Sie ein Tag ein und klicken Sie anschliessend auf +</string>
    <string name="tagInfoTitle">Tag Info</string>
    <string name="tagInfo">Bitte erfassen Sie hier Tags. Diese Tags werden von unserem Algorithmus verwendet, um Vorschläge zu berechnen.\nDamit möglichst passende Vorschläge generiert werden können, bitten wir Sie um 3-20 aussagekräftige und passende Tags</string>
    <string name="inputContactInfoHelper">Geben sie Ihre EmailAdresse oder Telefonnummer ein</string>
    <string name="inputEmailHelper">Geben sie eine gültige EmailAdresse ein</string>
    <string name="inputTagHelper">Geben Sie zwischen 3 und 20 Tags ein</string>
    <string name="gpsDeactivated">GPS ist deaktiviert</string>
    <string name="gpsError">GPS Verbindung Fehlgeschlagen</string>
    <string name="gpsNoLocation">Es konnte keine Ortschaft ermittelt werden</string>
    <string name="inputGroupName">Geben Sie einen Gruppennamen an ein</string>
    <string name="maxCharacter">Sie können maximal %d Zeichen eingeben</string>
    <string name="inputFirstname">Geben sie Ihren Vornamen ein</string>
    <string name="inputLastname">Geben sie Ihren Nachnamen ein</string>
    <string name="edit">Bearbeiten</string>
    <string name="editProfile">Profil bearbeiten</string>
    <string name="groupRendezvous">Treffpunkt der Gruppe: </string>
    <string name="sex">Geschlecht: </string>
    <string name="age">Alter: </string>
    <string name="noGroupsToSwipe">Zurzeit wurden leider keine passenden Gruppen gefunden</string>
    <string name="noPersonsToSwipe">Zurzeit wurden leider keine passenden Personen gefunden</string>
    <string name="user">User</string>
    <string name="group">Group</string>
    <string name="rejected">Abgelehnt</string>
    <string name="accepted">Angenommen</string>
    <string name="selectProfileOrGroupHelper">Da können Sie ihr Profil oder ihre Gruppe auswählen</string>
    <string name="createProfile">Profil anlegen</string>
    <string name="dropdown">Dropdown</string>
    <string name="swipeHelper">Hier werden für die oben ausgewählte Person oder Gruppe Vorschläge gezeigt, die Sie mit einem Rechts-Swipe annehmen und mit einem Links-Swipe ablehnen können.</string>
    <string name="matchHelper">Hier finden sie die Kontaktdaten zu den Matches, also zu den Vorschlägen, die von beiden Seiten angenommen wurden.</string>
    <string name="whatIsThis">Was ist das?</string>
    <string name="newGroup">Neue Gruppe erstellen</string>
</resources>
