<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="56dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarAlwaysDrawHorizontalTrack="true">

        <Switch
            android:id="@+id/active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/aktuell_auf_der_suche_nach_einer_gruppe"
            android:textColor="@color/Text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/active"
            android:layout_margin="8dp"
            android:hint="@string/nachname"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/Text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/defaultInput"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastName"
            android:layout_margin="8dp"
            android:hint="@string/vorname"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPersonName"
                android:textColor="@color/Text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/defaultInput"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstName"
            android:layout_margin="8dp"
            android:hint="@string/alter"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/Text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/defaultInput"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age"
            android:layout_margin="8dp"
            android:hint="@string/geschlecht"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/Text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/defaultInput"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender"
            android:layout_margin="8dp"
            android:hint="@string/e_mail_adresse"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/Text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/defaultInput"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_margin="8dp"
            android:hint="@string/telefonnummer"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/Text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/defaultInput"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneNumber"
            android:layout_margin="8dp"
            android:hint="@string/beschreibe_dich"
            app:errorEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textColor="@color/Text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/defaultInput"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@+id/button_info"
            android:hint="@string/neuen_tag_hinzuf_gen"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/Text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/defaultInput"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_tag"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_below="@+id/description"
            android:layout_alignEnd="@+id/text_tag"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/plus" />

        <ImageButton
            android:id="@+id/button_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:backgroundTint="@color/colorBackground"
            android:contentDescription="@string/info_button"
            android:src="@drawable/ic_info_24dp" />

        <co.lujun.androidtagview.TagContainerLayout
            android:id="@+id/tagcontainerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_tag"
            android:layout_margin="8dp"
            android:padding="10dp"
            app:container_background_color="@color/colorBackground"
            app:container_enable_drag="false"
            app:container_gravity="center"
            app:horizontal_interval="10dp"
            app:tag_background_color="@color/colorBackground"
            app:tag_border_color="@color/colorPrimary"
            app:tag_border_width="1dp"
            app:tag_clickable="true"
            app:tag_corner_radius="3dp"
            app:tag_text_color="@color/Text"
            app:tag_text_size="16sp"
            app:tag_theme="none"
            app:vertical_interval="10dp" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tagcontainerLayout"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/save_button"
            android:text="@string/abbrechen" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tagcontainerLayout"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:text="@string/speichern" />
    </RelativeLayout>


</ScrollView>